fix: corrigindo overflow

--- a/view.css
+++ b/view.css
@@ -189,7 +189,6 @@
         height: 100%;
         bottom: 2rem;
         z-index: 1;
-        overflow: scroll;
         padding: 10px 20px;
     }
     .stats li {
@@ -197,12 +196,12 @@
     }
     .viewRight{
         width: 100%;
-        height: 100%;
+        height: 42%;
         right: 0px;
         top: 1rem; 
     }
     .viewRight img {
-        left: 0%;
+        left: 10%;
     }
     .buttonExit{
         bottom: 92%;
